MDEV-8658 DATE(zerofill_column) and DATE(COALESCE(zerofill_column)) return different results MDEV-8660 TIME(int_zerofill_column) returns a wrong result